width height add

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
             >
                 <a-image
                     src="assets/asset.png"
+		    width="5"
+		    height="5"
                     scale="0.8 1 1"
                     class="clickable"
                     rotation="-90 0 0"
