--- a/index.html
+++ b/index.html
@@ -154,7 +154,8 @@
 					resizedContext.drawImage(aScene, 0, 0, width, height);
 				} else {
 					// 縦長（スマホ）
-					var scale = height / width;
+					//var scale = height / width;
+					var scale = 1;
 					var scaledWidth = height * scale;
 					var marginLeft = (width - scaledWidth) / 2;
 					resizedContext.drawImage(aScene, marginLeft, 0, scaledWidth, height);
