--- a/index.html
+++ b/index.html
@@ -149,17 +149,16 @@
 				resizedContext.drawImage(video, 0, 0, width, height);
 
 				//カメラの画角でar側の縮小処理を変える
-				if (width > height) {
+				//if (width > height) {
 					// 横長（PC)
 					resizedContext.drawImage(aScene, 0, 0, width, height);
-				} else {
+				//} else {
 					// 縦長（スマホ）
 					//var scale = height / width;
-					var scale = 1;
-					var scaledWidth = height * scale;
-					var marginLeft = (width - scaledWidth) / 2;
-					resizedContext.drawImage(aScene, marginLeft, 0, scaledWidth, height);
-				}
+					//var scaledWidth = height * scale;
+					//var marginLeft = (width - scaledWidth) / 2;
+					//resizedContext.drawImage(aScene, marginLeft, 0, scaledWidth, height);
+				//}
 				return resizedCanvas.toDataURL('image/png');
 			}
 		}
