--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 		>
 		<a-image
 			src="assets/asset.png"
+			width="3"
+			height="3"
 			scale="0.8 1 1"
 			class="clickable"
 			rotation="-90 0 0"
@@ -149,16 +151,16 @@
 				resizedContext.drawImage(video, 0, 0, width, height);
 
 				//カメラの画角でar側の縮小処理を変える
-				//if (width > height) {
+				if (width > height) {
 					// 横長（PC)
 					resizedContext.drawImage(aScene, 0, 0, width, height);
-				//} else {
+				} else {
 					// 縦長（スマホ）
-					//var scale = height / width;
-					//var scaledWidth = height * scale;
-					//var marginLeft = (width - scaledWidth) / 2;
-					//resizedContext.drawImage(aScene, marginLeft, 0, scaledWidth, height);
-				//}
+					var scale = height / width;
+					var scaledWidth = height * scale;
+					var marginLeft = (width - scaledWidth) / 2;
+					resizedContext.drawImage(aScene, marginLeft, 0, scaledWidth, height);
+				}
 				return resizedCanvas.toDataURL('image/png');
 			}
 		}
