--- a/index.html
+++ b/index.html
@@ -5,8 +5,56 @@
         	<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         	<script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         	<script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-		<meta name="viewport" content="width=device-width,initial-scale=1">
+		
     		<title>かげときの準備室</title>
+		
+		<style>
+			.ui {
+				position: absolute;
+				z-index: 100;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				height: auto;
+				margin: 0;
+				padding: 10px 15px 30px;
+				text-align: center;
+				box-sizing: border-box;
+			}
+			.ui a {
+				display: inline-block;
+				width: 60px;
+				height: 60px;
+				background-color: #ffffff;
+				line-height: 100%;
+				color: #303030;
+				margin: 10px 3px;
+				border-radius: 50%;
+				position: relative;
+			}
+			.ui a i {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%,-50%);
+			}
+			.ui a:active {
+				color: #ff0000;
+			}
+			#snap {
+				max-width: 100%;
+				height: auto;
+				display: block;
+				visibility: hidden;
+			}
+			.ui a.disabled {
+				pointer-events: none;
+				color: #cccccc;
+			}
+			#snap.visible {
+				visibility: visible;
+			}
+		</style>
 	</head>
 
 	<body style="margin: 0; overflow: hidden;">
