--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 	<head>
         	<script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         	<script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-        	<script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
-        	<script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-		
+
+		<meta name="viewport" content="width=device-width,initial-scale=1">
     		<title>かげときの準備室</title>
 		
 		<style>
